# Secretosocultos-clean

./: .gitignore  Dockerfile  Procfile  build.sh  manage.py  pyproject.toml  requirements.txt
jdante/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: categoria_feeder.py  producto_feeder.py
static/: mail.php
static/css/: all.min.css  flaticon.css  form-login.css  form-reset.css  form-signup.css  main.css  main.css.map  style.css
static/img/logo/: logo vertical.ai
static/js/: main.js
static/scss/: _common.scss  _contact.scss
store/: admin.py  forms.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_categoria_options_alter_itempedido_options_and_more.py  0003_campaña.py  0004_suscriptorboletin_remove_itempedido_pedido_and_more.py  0005_categoriablog_and_more.py  0006_categoria_imagen_portada_alter_categoria_nombre.py  0007_productodetalle.py  0008_alter_producto_imagen.py  0009_remove_post_autor_post_autor_blog_alter_post_imagen.py
store/models/: __init__.py  newsletter.py  post.py  product.py  producto_detalle.py  profile.py
store/templates/: 404.html  about.html  articulos.html  blog-details.html  blog-grid.html  blog-standard.html  contact.html  events-details.html  events.html  faq.html  history.html  index-2.html  index.html  project-gallery.html  project-image.html  project-new.html  project-video.html  reset-password.html  rituales.html  sign-in.html  sign-up.html  success_signup.html  talismanes.html  tarot.html  tienda.html  tienda_categoria.html  tienda_producto.html  veladoras.html
