[tool.poetry]
name = "jdante"
version = "1.0.0"
description = "Sitio ecommerce esoterico"
authors = ["Adrian Aguirre Larriva  <eldudyaguirre@hotmail.com>"]
license = "JD2025"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
django-extensions = "^3.2.3"
django-bootstrap5 = "^23.4"
whitenoise = "^6.6.0"
django-allauth = "^0.60.0"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
